tests/helper-macro-git/tests/ui/fail/doc_2_content_diff.stderr
error: Git citation content has changed!
                Remote: https://github.com/ramate-io/cite
                Path: tests/helper-macro-git/helper-macro-git/DOC_2.md
                Revision: 83e6dc0fb4d357c87a89afa7b22c4a62aad0b41
       Fdiff --git a/tests/helper-macro-git/helper-macro-git/DOC_2.md b/tests/helper-macro-git/helper-macro-git/DOC_2.md
       index e12cbda..85f57b4 100644
       --- a/tests/helper-macro-git/helper-macro-git/DOC_2.md
       +++ b/tests/helper-macro-git/helper-macro-git/DOC_2.md
       H@@ -2,8 +2,8 @@ I am now adding things.
        I am adding things here and here.
        I
        would
       -like to
       -add
       +like to be
       +adding
        several
        things
        and change
  --> tests/ui/fail/doc_2_content_diff.rs:7:1
   |
7  | / #[cite(
8  | |     above,
9  | |     reason = "Testing git source 2",
10 | |     ref_rev = "41b038e2dcd66b710ccfa2fd3be56426a9625a67"
11 | | )]
   | |__^
   |
   = note: this error originates in the attribute macro `cite` (in Nightly builds, run with -Z macro-backtrace for more info)
